# cmip-climate-data-explorer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: windows-release.yml
docs/: ARCHITECTURE.md  DATA_SOURCES.zh-CN.md  RELEASE.md  USER_GUIDE.zh-CN.md
packaging/: cmip_explorer.spec  installer.iss
resources/: variable_zh.json
src/cmip_explorer/: __init__.py  app.py  config.py  diagnostics.py  logging_config.py  settings.py
src/cmip_explorer/application/: __init__.py  workflow.py
src/cmip_explorer/domain/: __init__.py  enums.py  errors.py  models.py  state_machine.py
src/cmip_explorer/infrastructure/: update.py
src/cmip_explorer/infrastructure/catalog/: __init__.py  catalog.py
src/cmip_explorer/infrastructure/download/: __init__.py  http.py
src/cmip_explorer/infrastructure/persistence/: __init__.py  database.py  repositories.py  tables.py
src/cmip_explorer/infrastructure/processing/: __init__.py  grouped.py  local.py  pipeline.py  scientific.py
src/cmip_explorer/infrastructure/providers/: __init__.py  catalog.py
src/cmip_explorer/infrastructure/region/: __init__.py  service.py
src/cmip_explorer/infrastructure/search/: __init__.py  backends.py  interfaces.py  normalizer.py  registry.py  (+2 more)
src/cmip_explorer/resources/: catalog.db
src/cmip_explorer/ui/: async_runner.py  dialogs.py  fonts.py  main_window.py  state.py  style.py  variable_labels.py  widgets.py
src/cmip_explorer/workers/: __init__.py  main.py
tests/integration/: test_catalog.py  test_direct_download.py  test_grouped_processing.py  test_local_processing.py  test_persistence.py  test_processing_pipeline.py  test_task_cleanup.py
tests/ui/: test_library_page.py  test_main_window.py  test_processing_page.py
tests/unit/: test_download.py  test_provider_backends.py  test_provider_catalog.py  test_region.py  test_scientific.py  test_search_normalizer.py  test_search_service.py  test_settings.py  test_state_machine.py  test_subset_planning.py  test_update_service.py  test_variable_labels.py
tools/: build_windows.ps1  capture_ui.py
tools/catalog_builder/: build_catalog.py
(+15 files in other folders)
